# sentinel-ops-suite

./: .checkmake.toml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  EOF  FastAPIpoint.txt  HELP.md  Makefile  Makefile.md  ONBOARDING.md  README-ops.md  README.md  SECURITY.md  __init__.py  _config.yml  admin_auth_tools_bundle.txt  auto_repair_permissions.sh  azure-pipeline.yml  bootstrap.sh  bootstrap.sql  check-db.sh  ci_sync.sh  cleanup_root.py  create-db-if-missing.sh  create-user.sh  create_tables_indexed.sql  create_tables_reset.sql  db-bootstrap.sh  docs.py  doctor-ci.yml  doctor.py  fix_docs.sh  fix_idrim_imports.patch  generate_hash.py  greperults2.txt  (+37 more)
.drift/: baseline.json
.github/: pages.yml
app/: main.py
app_bundle/: main.py  requirements.txt
backend/: Makefile  Makefile.canonical  Makefile.drift  Makefile.reference  admin_auth_tools_bundle.txt  app_bundle.txt  auth.audit.py  main.py  pyproject.toml  requirements.txt
backend/admin/: routes.py  schemas.py
backend/alerts/: alert_engine.py
backend/anomaly/: correlation.py
backend/api/: dashboard_health.py
backend/api/routes/: drim_router.py  idrim_router.py
backend/api/sse/: idrim_sse.py
backend/app/: adaptive_thresholds.py  anomaly_detector.py  anomaly_engine.py  database.py  health_score.py  main.py  predictive_model.py  repair_engine.py  sync_history.py
backend/app/core/: metrics.py  plugin_loader.py  security.py
backend/app/dashboard/: pelm_layout.py
backend/app/models/: __init__.py  plugin_models.py  user.py
backend/app/ops/: idrim_cli.py  idrim_daily_scan.py
backend/app/pelm/: pelm_canonical.py  pelm_diff.py  pelm_plugin.py  pelm_regression.py  pelm_snapshot.py  pelm_status.py  pelm_tools.py  report_generator.py
backend/app/pelm/report_templates/: html_template.html  markdown_template.md
backend/app/providers/iam/: aws.py  base.py  registry.py
backend/app/reports/html/: anomaly_section.py  generate_report.py  pelm_report.html
backend/app/repositories/: user_repository.py
backend/app/routers/: __init__.py  auth.py  ci_summary.py  dashboard.py  dashboard_health.py  dashboard_heath.py  git_snapshots.py  iam_fetch.py  idrim_analysis.py  idrim_diff.py  idrim_diif.py  idrim_history.py  idrim_router.py  idrim_sse.py  logs_router.py  makefile_admin.py  makefile_diff.py  makefile_health.py  ops_stream_router.py  pelm.py  pelm_stream.py  plugins.py  repo_health.py  router_drift.py  system.py  users.py  workflow_runs.py
backend/app/routes/: auth.py  idrim_router.py  pelm_status_route.py
backend/app/schemas/: auth.py  pelm_dashboard.py
backend/app/services/: auth_service.py  idrim_history.py
backend/app/tools/security/: idrim.py
backend/app/tui/: main.py
backend/app/tui/panels/: anomaly_panel.py
backend/app/utils/: file_utils.py  router_loader.py  startup_validator.py
backend/auth/: dependencies.py  models.py  routes.py  schemas.py  security.py
backend/ci/: health_gate.py  makefile_canonical.py  makefile_drift.py  makefile_repair.py  makefile_tools.py  makefile_validate.py  pelm_gate.py
backend/health/: health_score.py  health_trend.py  predictive.py  run_daily_score.py
backend/observability/: summary.py
backend/pelm/: pelm_canonical.py  pelm_diff.py  pelm_regression.py  pelm_snapshot.py  pelm_tools.py  report_generator.py
backend/plugins/: dns_check.py  http_probe.py  ssrf_basic.py  ssrf_header_probe.py
backend/routes/: doctor.py  makefile_admin.py  sync_history.py
backend/routes/repo/: makefile.ts
backend/src/api/: mfa.ts
backend/src/ssrf_command_console/: __init__.py  cli.py  main.py
backend/src/ssrf_command_console/auth/: login.py  mfa.py
backend/src/ssrf_command_console/core/: engine.py
backend/src/ssrf_command_console/plugins/: plugin_loader.py
backend/tests/: test_smoke.py
backend/tools/: __init__.py
backend/tools/security/: __init__.py
backend/tools/security/idrim/: __init__.py  idrim_cli.py  idrim_engine.py  idrim_exceptions.py  idrim_models.py  idrim_router.py  idrim_service.py  idrim_stream.py  idrim_tasks.py  idrim_tile.py  idrim_utils.py  irdrim_engine.py  irdrim_exceptions.py  irdrim_models.py  irdrim_service.py  irdrim_tasks.py  verify_idrim.py
config/: ssrf_config.json
css/: style.css
dashboard/: .prettierrc  Makefile  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
data/: Makefile.before_regen  kerberoastables.txt  targets_history.json  users.txt
docs/: DRIFT.md  HELP.md  MAKEFILE.md  MAKEFILE_ARCHITECTURE.md  architecture.md  category_map.json  ci-governance.md  developer-onboarding.md  development.md  index.html  index.md  makefile-architecture.md  makefile-system.md  makefile_reference.md  operations.md  security.md  super_doctor_20260320T123936Z.html  super_doctor_20260320T124023Z.html  super_doctor_20260320T124444Z.html  super_doctor_20260320T132741Z.html  super_doctor_20260320T132802Z.html  super_doctor_20260320T134249Z.html  super_doctor_report.html  troubleshooting.md
docs-site/: package-lock.json  package.json
frontend/: Makefile.canonical  eslint.config.js  index.md  package-lock.json  package.json  tailwind.config.js  vite.config.cjs  vitest.config.ts
init/: sentinel_init.sh
mk/: Makefile.all  Makefile.bootstrap  Makefile.ci  Makefile.dev  Makefile.docs  Makefile.docs-pdf  Makefile.drift  Makefile.frontend  Makefile.health  Makefile.lint  (+18 more)
(+1044 files in other folders)
