[project]
name = "ssrf-command-console"
version = "0.1.0"
description = "SSRF Command Console — modular CLI toolkit for SSRF analysis and operator workflows."
authors = [
    { name = "Charles Roberts" }
]
requires-python = ">=3.10"
readme = "README.md"

# Runtime dependencies
dependencies = [
    "click>=8.1.0",
    "rich>=13.0",
    "typer>=0.12.0",

]

# CLI entrypoint (Typer-based)
[project.scripts]
ssrf-console = "ssrf_command_console.cli:cli"

# Optional dependency groups
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
ops = [
    "rich>=13.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
