[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# =====================================================================
# BLACK — Python Formatter
# =====================================================================
[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false
exclude = '''
(
    /(\.git|\.venv|\.drift|__pycache__)/
)
'''

# =====================================================================
# RUFF — Linter + Formatter
# =====================================================================
[tool.ruff]
line-length = 88
target-version = "py311"
extend-select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "I",  # import sorting
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # bugbear
]
ignore = [
    "E501", # line length handled by Black
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = true

# =====================================================================
# PROJECT METADATA (Optional, Safe Defaults)
# =====================================================================
[project]
name = "sentinel-ops-suite"
version = "0.1.0"
description = "Operator-grade tooling for drift detection, observability, and CI enforcement."
requires-python = ">=3.11"
authors = [
    { name = "Charlie", email = "dev@example.com" }
]

# =====================================================================
# OPTIONAL: TOOLING CONFIG (Detect-Secrets, Commitizen)
# =====================================================================

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = true

[tool.detect-secrets]
baseline = ".secrets.baseline"
