[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idrim-backend"
version = "0.1.0"
description = "Backend service for IDRIM — Identity Drift & Role Integrity Monitoring"
requires-python = ">=3.10"

authors = [
    { name = "Charlie", email = "none" }
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "click>=8.1.7",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "jinja2>=3.1.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.1.0",
    "flake8>=7.0.0"
]

[project.scripts]
idrim = "app.ops.idrim_cli:cli"

[tool.setuptools.packages.find]
where = ["app"]
